# tree-sitter-fluent

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fluent.pc.in
bindings/go/: binding_test.go
bindings/python/tree_sitter_fluent/: __init__.py
bindings/rust/: lib.rs
examples/: hello.ftl
src/: grammar.json  node-types.json  parser.c
