[package]
name = "tree-sitter-fluent"
description = "tree-sitter parser for Fluent"
version = "0.1.0"
authors = ["Silver <sofimaturana830@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fluent"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/silverflower67/tree-sitter-fluent"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
